--- a/src/assests/Home.css
+++ b/src/assests/Home.css
@@ -1,19 +1,19 @@
 /* Home.css */
 .home {
-    background-color: #f7f9fc;
+    background-color: #FFF156;
     padding: 80px 0;
     text-align: center;
   }
   
   .home-title {
     font-size: 2.5rem;
-    color: #333;
+    color: #36EEE0;
     margin-bottom: 20px;
   }
   
   .home-description {
     font-size: 1.2rem;
-    color: #777;
+    color: #36EEE0;
     margin-bottom: 40px;
   }
   
